--- a/app/assets/stylesheets/redesign/_header.css.scss
+++ b/app/assets/stylesheets/redesign/_header.css.scss
@@ -1220,6 +1220,26 @@ li#cart-trigger {
     display: none;
   }
 
+  .prev{
+    top: 55%;
+    position: absolute;
+    background-image: url('icon-arrow-left.png');
+    opacity: 1;
+    background-size: contain;
+    z-index: 2;
+    text-indent: -9999px;
+  }
+  .next{
+    right: 0;
+    top: 55%;
+    position: absolute;
+    background-image: url('icon-arrow-right.png');
+    opacity: 1;
+    background-size: contain;
+    z-index: 2;
+    text-indent: -9999px;
+  }
+
   #rect-new-this-week{
     background-color: transparent;
     @media(max-width: 1000px)
@@ -1300,25 +1320,7 @@ li#cart-trigger {
       .rslides_tabs{
         display: none;
       }
-      .prev{
-        top: 55%;
-        position: absolute;
-        background-image: url('icon-arrow-left.png');
-        opacity: 1;
-        background-size: contain;
-        z-index: 2;
-        text-indent: -9999px;
-      }
-      .next{
-        right: 0;
-        top: 55%;
-        position: absolute;
-        background-image: url('icon-arrow-right.png');
-        opacity: 1;
-        background-size: contain;
-        z-index: 2;
-        text-indent: -9999px;
-      }
+
 
       img{
         width: 15%;
@@ -1409,34 +1411,45 @@ li#cart-trigger {
   }
   #rect-lookbook{
     background-color: transparent;
-    .col{
-      padding:0;
+    .lookbook-container{
+      .prev, .next{
+        top:47%;
+      }
+      .lookbook-item:nth-child(odd){
+        .head{
+          background-color: black;
+        }
+      }
+      .lookbook-item:nth-child(even){
+        .head{
+          background-color: #003647;
+        }
+      }
+      .lookbook-item{
+        width: 33.3%;
+        float: left;
+      }
       .head{
-        color: white;
-        text-align: center;
-        font-weight: 600;
-        height: 20%;
-        display: table;
         width: 100.3%;
+        cursor: pointer;
+        text-align: center;
+        float: left;
+        background-color: black;
+        height: 80px;
+        font-size: 1.4rem;
+        display: table;
         .text{
           display: table-cell;
-          vertical-align: middle
+          vertical-align: middle;
+          font-weight: 700;
+          color: white;
         }
       }
       .image{
-        img{
-          width: 100%;
-        }
-      }
-    }
-    .col:nth-child(odd){
-      .head{
-        background-color: black;
-      }
-    }
-    .col:nth-child(even){
-      .head{
-        background-color: #003647;
+        cursor: pointer;
+        width: 100%;
+        float: left;
+        clear: both;
       }
     }
   }
