--- a/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
+++ b/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
@@ -212,7 +212,7 @@ coffee:
           nav: true
         })
 
-    $("#rect-lookbook .lookbook-slide").responsiveSlides({
+    $(".lookbook-slide").responsiveSlides({
       auto: false,
       nav: true
     })
