temp placeholder images, text truncation, bs tabs

--- a/app/assets/stylesheets/application_redesign.css.scss
+++ b/app/assets/stylesheets/application_redesign.css.scss
@@ -49,6 +49,9 @@
 // Time specific content
 @import 'transient_content';
 
+// Base
+@import 'redesign/base/containers';
+
 // Components
 @import 'redesign/components/tabs';
 @import 'redesign/components/media';
