--- a/app/assets/stylesheets/redesign/_index.css.scss
+++ b/app/assets/stylesheets/redesign/_index.css.scss
@@ -468,16 +468,20 @@
 // Main Content area V-2
 .home-main-content {
 
-  .media-wrap,
-  .tabs.vertical {
-    margin-bottom: 30px;
-  }
+  .main {
 
-  .main.media-wrap {
-    height: 240px;
+    .media-wrap,
+    .tabs.vertical {
+      margin-bottom: 30px;
+    }
 
-    &.lrg {
-      height: 426px;
+    .media-wrap {
+      height: 240px;
+
+      &.lrg {
+        height: 426px;
+      }
+
     }
 
   }
@@ -485,5 +489,21 @@
   .tabs.vertical .tab-wrap {
     height: 360px;
   }
+
+  // START - mobile
+  @include mobile {
+
+    & {
+
+      .tabs.vertical .tab-wrap {
+        width: 100%;
+        height: auto;
+        padding-bottom: 56.25%; // 16:9
+      }
+
+    }
+
+  }
+  // END - mobile
 
 }
