--- a/app/assets/stylesheets/redesign/components/_media.scss
+++ b/app/assets/stylesheets/redesign/components/_media.scss
@@ -5,29 +5,48 @@
   width: 100%;
   height: auto;
   overflow: hidden;
-  border: solid $c-neutral-2 1px;
-
-  &:before {
-    content: '';
-    position: absolute;
-    display: block;
-    top: 10px;
-    bottom: 10px;
-    left: 10px;
-    right: 10px;
-    background: $c-neutral-2;
-  }
+  background: $c-neutral-2;
 
   img {
-    position: absolute;
     display: block;
     width: 100%;
     height: auto;
+    opacity: 1;
+  }
+
+  .title-wrap {
+    position: absolute;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
-    opacity: 0;
+
+    .title {
+      display: table;
+      width: 100%;
+      height: 100%;
+      padding: 3px 100px;
+
+      > * {
+        display: table-cell;
+        margin: 0;
+        padding: 0;
+        vertical-align: middle;
+        text-align: center;
+        font-size: 1.875em;
+        font-weight: 400;
+      }
+
+    }
+
+  }
+
+  &.skin-light .title > * {
+    color: $c-neutral-white;
+  }
+
+  &.skin-dark .title > * {
+    color: $c-neutral-black;
   }
 
   &.is-loaded {
