--- a/app/assets/stylesheets/redesign/components/_tabs.scss
+++ b/app/assets/stylesheets/redesign/components/_tabs.scss
@@ -20,30 +20,33 @@
       li {
         display: table;
         width: 100%;
-      }
 
-      a {
-        position: relative;
-        display: table-cell;
-        width: 100%;
-        height: $tab-nav-height;
-        padding: 0 30px;
-        vertical-align: middle;
-        line-height: normal;
-        font-size: 0.875em;
-        text-transform: uppercase;
-        color: $c-neutral-black;
-        border-bottom: solid $c-neutral-5 1px;
 
-        &:first-child {
+        &:first-child a {
           border-top: solid $c-neutral-5 1px;
         }
 
       }
 
-      .is-active {
-        background: $c-brand-blue;
-        color: $c-neutral-white;
+      a {
+        display: table-cell;
+        width: 100%;
+        height: $tab-nav-height;
+        padding: 0 30px;
+        vertical-align: middle;
+        font-size: 0.750em;
+        text-transform: uppercase;
+        color: $c-neutral-black;
+        border-bottom: solid $c-neutral-5 1px;
+      }
+
+      li.active {
+        position: relative;
+        
+        a {
+          background: $c-brand-blue;
+          color: $c-neutral-white;
+        }
 
         &:after {
           content: '';
@@ -77,7 +80,72 @@
       width: 100%;
       height: 100%;
       overflow: hidden;
+      opacity: 0;
+      visibility: hidden;
+
+      img {
+        display: block;
+        width: 100%;
+        height: auto;
+      }
+
+      &.active {
+        opacity: 1;
+        visibility: visible;
+        @include transition(opacity linear .6s);
+      }
+
     }
+
+    .navigator {
+      $btn-size: 30px;
+      position: absolute;
+      width: $btn-size;
+      height: $btn-size;
+      top: 50%;
+      margin-top: -($btn-size / 2);
+      display: none;
+      text-align: center;
+      border: solid $c-neutral-white 1px;
+
+      &.btn-prev {
+        left: 15px;
+      }
+
+      &.btn-next {
+        right: 15px;
+      }
+
+      .icon:before {
+        font-size: 14px;
+        line-height: $btn-size;
+        color: $c-neutral-white;
+      }
+
+    }
+
+    // START - mobile
+    @include mobile {
+
+      & {
+
+        .tab-wrap {
+          padding-bottom: 45px;
+        }
+
+        > ul {
+          display: none;
+          background: $c-neutral-2;
+        }
+
+        .navigator {
+          display: block;
+        }
+
+      }
+
+    }
+    // END - mobile
     
   }
 
