CTO - update sale terms

--- a/app/views/statics/ecom_terms.html.slim
+++ b/app/views/statics/ecom_terms.html.slim
@@ -205,9 +205,12 @@
 
       p Shipping & handling timing approximately 7-10 days on all orders. The customer covers for shipping cost in case of returns. Items purchased during the 15% off new season sale that are discounted more than 15% will incur a $14.95 restocking fee.
 
-
       h2 50% off 4th of July sale
 
       p Offer valid on full price new season styles only. Prices as marked. Offer valid online at fameandpartners.com only. Offer not valid on customisations, custom colours or express making fees. Offer valid between 3rd - 5th of July (11:59pm PST) 2015. Orders placed during the sale from the US incur a $11.70 shipping fee. All other countries incur a $30 shipping fee.
 
       p Shipping & handling time approximately 7-10 days on all orders. The customer covers for shipping cost in case of returns. Items discounted at more than 15% will incur a $14.95 restocking fee.
+
+      h2 100 hour sale (September 2015)
+
+      p Offer not valid on customisations, custom colours or express making fees. Offer valid on recommended colours only. Offer valid 14th September 2015 - 18th September midday AEST only. Orders to AU, US & UK incur a $11.70 dispatch fee. All other countries incur a $30 shipping fee. Shipping and handling approximately 7 - 10 business days on all orders. No returns, exchanges only. The item(s) you exchange must be equal or greater in value. See site for full terms and conditions.
