--- a/app/assets/stylesheets/redesign/_mixins.css.scss
+++ b/app/assets/stylesheets/redesign/_mixins.css.scss
@@ -49,6 +49,13 @@
   transition:         $transition;
 }
 
+@mixin transition-delay($delay) {
+  -moz-transition-delay:    $delay;
+  -o-transition-delay:      $delay;
+  -webkit-transition-delay: $delay;
+  transition-delay:         $delay;
+}
+
 
 @mixin border-radius($radius) {
   -webkit-border-radius: $radius;
