--- a/app/assets/stylesheets/redesign/_header.css.scss
+++ b/app/assets/stylesheets/redesign/_header.css.scss
@@ -1174,7 +1174,7 @@ li#cart-trigger {
     }
 
     span:hover:not(.search-wrapper) {
-      
+
       &,
       a {
         background-color:#003647;
@@ -1323,6 +1323,10 @@ li#cart-trigger {
         vertical-align: middle;
         height: 100%;
       }
+      ul{
+        list-style: none;
+        padding-left: 0;
+      }
       .rslides {
         position: relative;
         list-style: none;
@@ -1363,6 +1367,7 @@ li#cart-trigger {
 
       img{
         width: 15%;
+        float: left;
       }
       a:not(:first-child){
         img{
