--- a/app/assets/stylesheets/redesign/_header.css.scss
+++ b/app/assets/stylesheets/redesign/_header.css.scss
@@ -1164,21 +1164,31 @@ li#cart-trigger {
 
     span{
       display: inline-block;
-      padding: 8px 15px;
+      height: 30px;
       margin-top: -1px;
       margin-bottom: -2px;
-      line-height: normal;
+      padding: 0 15px;
+      line-height: 30px;
       font-size: 1.2rem;
+      color: #000;
       cursor: pointer;
       position: relative;
+
+      em {
+        font-size: 1.4rem;
+        font-style: italic;
+        text-transform: none;
+        font-weight: 500;
+      }
+
     }
 
     span:hover:not(.search-wrapper) {
       
       &,
-      a {
-        background-color:#003647;
-        color:white;
+      & > a {
+        background-color: #003647;
+        color: white;
       }
 
     }
@@ -1189,6 +1199,53 @@ li#cart-trigger {
       .nav-mobile-logo{
         height: 15px;
       }
+    }
+
+    .nested {
+      position: relative;
+
+      ul {
+        position: absolute;
+        left: 0;
+        top: 29px;
+        width: 400px;
+        margin: 0;
+        padding: 30px;
+        display: none;
+        list-style: none;
+        text-align: left;
+        background-color: #f5f5f5;
+
+        li {
+          float: left;
+          width: 50%;
+          padding-right: 30px;
+
+          a {
+            text-transform: capitalize;
+            font-weight: 400;
+            font-size: 1.6rem;
+            color: #333;
+            background: transparent;
+
+            &:hover {
+              color: #355e6d;
+            }
+
+          }
+
+        }
+
+      }
+
+      &:hover {
+
+        ul {
+          display: block;
+        }
+
+      }
+
     }
 
   }
