--- a/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
+++ b/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
@@ -45,9 +45,23 @@ ruby:
         = image_tag 'logo/new-logo.svg', class: 'logo'
 
 .row#home-menu.hidden-xs.hidden-sm.text-center
-  span.new-this-week NEW THIS WEEK
+  span.new-this-week 
+    em New this week
   span.dresses DRESSES
-  span.events EVENTS
+  span.nested 
+    ' EVENTS
+    ul
+      li = link_to 'Formal'       , build_taxon_path('Formal')
+      li = link_to 'Wedding'      , build_taxon_path('Wedding')
+      li = link_to 'Birthday'     , build_taxon_path('Birthday')
+      li = link_to 'Special Event', build_taxon_path('Special Event')
+      li = link_to 'Ball Gowns'   , build_taxon_path('Ball Gowns')
+      li = link_to 'Bridesmaid'   , bridesmaid_collection_path
+      li = link_to 'Graduation'   , build_taxon_path('Graduation')
+      li = link_to 'Prom'         , build_taxon_path('Prom')
+      li = link_to 'Homecoming'   , build_taxon_path('Homecoming')
+      li = link_to 'Sweet 16'     , build_taxon_path('Sweet 16')
+      li = link_to 'Debutante'    , build_taxon_path('Debutante')
   span.lookbook LOOKBOOK
   span.magazine
     a href='http://fameandpartners.tumblr.com/' MAGAZINE
