--- a/engines/admin_ui/app/views/admin_ui/item_returns/events/_receive_item.html.slim
+++ b/engines/admin_ui/app/views/admin_ui/item_returns/events/_receive_item.html.slim
@@ -2,7 +2,7 @@
   = hidden_field_tag :event_type, event_type
   .form-group
     = f.label :location, class: 'control-label'
-    = f.select :location, %w[AU US], { include_blank: true}, { required: true, class: 'form-control' }
+    = f.select :location, ItemReturn::RECEIVE_LOCATIONS, { include_blank: true}, { required: true, class: 'form-control' }
   .form-group
     = f.label :received_on, class: 'control-label'
     = f.text_field :received_on, class: 'datepicker form-control', required: true
