--- a/app/assets/stylesheets/redesign/_header.css.scss
+++ b/app/assets/stylesheets/redesign/_header.css.scss
@@ -325,18 +325,18 @@ li.shop {
 
   #cart-trigger{
     #cart-item-count{
-      margin-top: 10px;
+      margin-top: 4px;
       position: absolute;
     }
     .shopping-bag{
       cursor: pointer;
       margin-left: 15px;
-      width: 24px;
-      margin-top: 4px;
+      height: 21px;
     }
   }
   .masthead.pull-right{
     padding-right: 0;
+    margin-top: 3px;
   }
   .masthead.pull-right:last-child{
     margin-top: 3px;
@@ -647,15 +647,15 @@ li#cart-trigger {
     overflow-x: hidden;
   }
 
-  @media(min-width: 599px)and(max-width:759px){
+  @media(min-width: 599px)and(max-width:767px){
     width: 575px;
     left: -575px;
     overflow-x: hidden;
   }
 
-  @media(min-width: 760px)and(max-width:799px){
-    width: 745px;
-    left: -745px;
+  @media(min-width: 768px)and(max-width:799px){
+    width: 775px;
+    left: -775px;
     overflow-x: hidden;
   }
 
@@ -684,8 +684,8 @@ li#cart-trigger {
       width:100%;
       li{
         margin-left: 20px;
-        @media(min-width: 760px){
-          margin-left: 0px;
+        @media(min-width: 768px){
+          margin-left: 0px !important;
         }
         width:100%;
         clear:both;
@@ -865,12 +865,12 @@ li#cart-trigger {
       margin-left: -575px;
     }
 
-    @media(min-width: 760px)and(max-width:799px){
-      margin-left: -745px !important;
+    @media(min-width: 768px)and(max-width:799px){
+      margin-left: -775px !important;
     }
 
     @media(min-width: 800px){
-      margin-left: -775px !important;
+      margin-left: -785px !important;
     }
   }
 
@@ -883,8 +883,15 @@ li#cart-trigger {
       margin-left: 10px;
   }
 
+  @media(min-width: 600px)and(max-width:767px){
+    #new-this-week-menu, #dresses-menu, #lookbook-menu, #magazine-menu, #events-menu{
+      .text-back{
+        width: 85% !important;
+      }
+    }
+  }
 
-  @media(min-width: 760px)and(max-width:799px){
+  @media(min-width: 768px)and(max-width:799px){
     .navbar-brand{
       left: 43% !important;
     }
@@ -915,7 +922,7 @@ li#cart-trigger {
     .grey-item{
       margin-left: 0px !important;
     }
-    #dresses-menu, #lookbook-menu, #magazine-menu{
+    #dresses-menu, #lookbook-menu, #magazine-menu, #events-menu{
       margin-top: 125px !important;
       .text{
         width: 90% !important;
@@ -971,7 +978,7 @@ li#cart-trigger {
         margin-left: 0px !important;
       }
     }
-    #lookbook-menu, #magazine-menu{
+    #lookbook-menu, #magazine-menu,#events-menu{
       margin-top: 125px !important;
       .text{
         width: 90% !important;
@@ -1006,14 +1013,14 @@ li#cart-trigger {
       margin-left: 390px;
     }
 
-    @media(min-width: 599px)and(max-width:759px){
+    @media(min-width: 599px)and(max-width:767px){
       margin-left: 575px;
     }
-    @media(min-width: 760px)and(max-width:799px){
-      margin-left: 745px;
+    @media(min-width: 768px)and(max-width:799px){
+      margin-left: 775px;
     }
     @media(min-width: 800px){
-      margin-left: 775px;
+      margin-left: 785px;
     }
 
     ul{
@@ -1034,7 +1041,7 @@ li#cart-trigger {
       margin-left: 0;
     }
   }
-  #dresses-menu, #lookbook-menu, #magazine-menu{
+  #dresses-menu, #lookbook-menu, #magazine-menu, #events-menu{
     height: 100%;
     background-color: white;
     position: absolute;
@@ -1056,14 +1063,14 @@ li#cart-trigger {
       margin-left: 390px;
     }
 
-    @media(min-width: 599px)and(max-width:759px){
+    @media(min-width: 599px)and(max-width:767px){
       margin-left: 575px;
     }
-    @media(min-width: 760px)and(max-width:799px){
-      margin-left: 745px;
+    @media(min-width: 768px)and(max-width:799px){
+      margin-left: 775px;
     }
     @media(min-width: 800px){
-      margin-left: 775px;
+      margin-left: 785px;
     }
     .text{
       width: 95%;
