removed MAGAZINE content from mobile menu

--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -253,10 +253,8 @@ ruby:
             .text LOOKBOOK
             .arrow
               i.fa.fa-chevron-right
-          li.normal-item#magazine-menu-open
-            .text MAGAZINE
-            .arrow
-              i.fa.fa-chevron-right
+          li.normal-item
+            a.text href='http://fameandpartners.tumblr.com/' MAGAZINE
           li.normal-item
             .text SALE
           li.normal-item
