add link to mobile moodboard

--- a/app/assets/stylesheets/redesign/_header.css.scss
+++ b/app/assets/stylesheets/redesign/_header.css.scss
@@ -321,6 +321,10 @@ li.shop {
       padding-right: 0;
       padding-left: 0;
     }
+    a {
+      color: black;
+      cursor: pointer;
+    }
   }
 
   #cart-trigger{
