--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -94,7 +94,8 @@ ruby:
           .masthead.pull-right.visible-xs.visible-sm
             .menu-item
               span.num#moodboard-counter 0
-              i.fa.fa-heart
+              a href='/wishlist'
+                i.fa.fa-heart
               span.pipe |
 
 
