--- a/app/assets/stylesheets/redesign/stylesheets/styles.css
+++ b/app/assets/stylesheets/redesign/stylesheets/styles.css
@@ -8009,6 +8009,30 @@ xheader
   -o-transition: right 0.3s;
   transition: right 0.3s;
 }
+
+#cart .shopping-bag-text-wrapper{
+    background-color: #EEEEEE;
+    padding-bottom:10px;
+    font-weight:500
+}
+#cart .shopping-bag-text{
+  margin-right:0;
+  padding-top:10px;
+  padding-left:35px
+}
+#cart .shopping-bag-payment-methods {
+  text-align:center;
+  margin-top:20px;
+
+}
+#cart .shopping-bag-payment-methods img{
+  width: 20%;
+}
+
+#cart .shopping-bag-payment-methods img:last-child{
+  margin-left: 20px;
+}
+
 /* line 77, ../sass/_cart.scss */
 #cart.speed-in {
   right: 0;
