--- a/app/views/layouts/redesign/_shopping_bag.html.slim
+++ b/app/views/layouts/redesign/_shopping_bag.html.slim
@@ -1,4 +1,6 @@
 ruby:
+  shopping_bag_texts = Preferences::ShoppingBag.new(current_site_version)
+
   shopping_bag_init = "
     window.app.shopping_bag = new ShoppingBag({
       cart:         window.app.shopping_cart,
@@ -6,7 +8,10 @@ ruby:
       container:    '#cart',
       toggle_link:  '.js-header-toolbar .js-trigger-shopping-bag',
       auto_open:    /open_cart=true/.test(window.location.search),
-      country_code: '#{session[:country_code]}'"
+      country_code: '#{session[:country_code]}',
+      free_styling:      '#{shopping_bag_texts.free_styling}',
+      free_delivery:     '#{shopping_bag_texts.free_delivery}',
+      customer_service:  '#{shopping_bag_texts.customer_service}'"
   if masterpass_available?
       shopping_bag_init = shopping_bag_init + ",
         masterpass_link: '#buyWithMasterPass',
