--- a/app/assets/stylesheets/redesign/stylesheets/styles.css
+++ b/app/assets/stylesheets/redesign/stylesheets/styles.css
@@ -8013,7 +8013,14 @@ xheader
 #cart .shopping-bag-text-wrapper{
     background-color: #EEEEEE;
     padding-bottom:10px;
-    font-weight:500
+    font-weight:500;
+}
+@media(max-width:600px){
+  #cart .shopping-bag-text-wrapper{
+    margin-top: 30px;
+    margin-left: 15px;
+    margin-right: 15px;
+  }
 }
 #cart .shopping-bag-text{
   margin-right:0;
