email subscription, SEO content

--- a/app/assets/stylesheets/redesign/_vars.css.scss
+++ b/app/assets/stylesheets/redesign/_vars.css.scss
@@ -9,6 +9,7 @@ $c-brand-blue: #003647;
 // Neutral Colors
 $c-neutral-black: #000;
 $c-neutral-2: #F5F5F5;
+$c-neutral-4: #d7d7d7;
 $c-neutral-5: #e4e4e4;
 $c-neutral-white: #fff;
 
