--- a/app/assets/stylesheets/application_redesign.css.scss
+++ b/app/assets/stylesheets/application_redesign.css.scss
@@ -56,6 +56,8 @@
 @import 'redesign/components/tabs';
 @import 'redesign/components/media';
 @import 'redesign/components/blog-posts';
+@import 'redesign/components/email-subscription';
+@import 'redesign/components/seo-content';
 
 // Generic
 @import 'redesign/generic/helpers';
