--- a/app/views/layouts/redesign/_shopping_bag.html.slim
+++ b/app/views/layouts/redesign/_shopping_bag.html.slim
@@ -1,3 +1,11 @@
+- if masterpass_available?
+  - if !masterpass_payment_method.prefers_test_mode? && masterpass_payment_method.server_mode == Mastercard::Common::PRODUCTION
+    = javascript_include_tag 'https://masterpass.com/lightbox/Switch/integration/MasterPass.client.js'
+  / = javascript_include_tag 'https://masterpass.com/lightbox/Switch/assets/js/MasterPass.omniture.js'
+  - else
+    = javascript_include_tag 'https://sandbox.masterpass.com/lightbox/Switch/integration/MasterPass.client.js'
+    / = javascript_include_tag 'https://sandbox.masterpass.com/lightbox/Switch/assets/js/MasterPass.omniture.js'
+
 ruby:
   shopping_bag_init = "
     window.app.shopping_bag = new ShoppingBag({
@@ -6,19 +14,14 @@ ruby:
       container:    '#cart',
       toggle_link:  '#cart-trigger',
       auto_open:    /open_cart=true/.test(window.location.search),
-      country_code: '#{session[:country_code]}',
-      masterpass_link: '#buyWithMasterPass'
-    });
-  "
-
-- if masterpass_available?
-  / = content_for :head do
-    - if !masterpass_payment_method.prefers_test_mode? && masterpass_payment_method.server_mode == Mastercard::Common::PRODUCTION
-      = javascript_include_tag 'https://masterpass.com/lightbox/Switch/integration/MasterPass.client.js'
-      / = javascript_include_tag 'https://masterpass.com/lightbox/Switch/assets/js/MasterPass.omniture.js'
-    - else
-      = javascript_include_tag 'https://sandbox.masterpass.com/lightbox/Switch/integration/MasterPass.client.js'
-      / = javascript_include_tag 'https://sandbox.masterpass.com/lightbox/Switch/assets/js/MasterPass.omniture.js'
+      country_code: '#{session[:country_code]}'"
+  if masterpass_available?
+      shopping_bag_init = shopping_bag_init + ",
+        masterpass_link: '#buyWithMasterPass',
+        masterpass_cart_callback_uri: '/masterpass/cart?payment_method_id=" + masterpass_payment_method.id.to_s + "'
+        "
+  end
+  shopping_bag_init = shopping_bag_init + "});"
 
 = content_for :inline_javascript do
   = raw shopping_bag_init
